syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "excelServiceClient";

package excelService;

service excelService
{ 

    // Parse Excel file
    rpc ParseExcel (ParseExcelRequest) returns (commons.protos.MessageResponse);

    // Fiecare upload trece prin partea asta:
    // - daca fiserul nu exista in bd => incarcare noua, upload + Parse 
    // - daca fisierul exista si e identic => report "Exista deja acest fisier"
    // - daca fisiesrul exista dar e diferit => upadate + parsare prin comparatie
    rpc CheckOrUpdate (CheckOrUpdateExcelRequest) returns (commons.protos.MessageResponse);
}

message ParseExcelRequest
{
    string file_name = 1;
}

message CheckOrUpdateExcelRequest
{
    string file_name = 1;
    bytes content = 2; 
}